# chillscapes

./: Cargo.toml  Project.taskpaper  README.md
assets/ecton/: backdrop.aseprite  star.aseprite  star.json
assets/pxzel/: README.md
assets/whitevault/: README.md
assets/whitevault/space/: Crater_1.json  Planet2.json  Planet3.json  Planet4.json  SmallPlanet-Blue.json  SmallPlanet.json  Space_case.json  astro.json  clicks.json  fail.json  success.json  ufo.json
src/: assets.rs  clicks.rs  element.rs  game.rs  main.rs  title.rs
