[package]
name = "chillscapes"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kludgine = { git = "https://github.com/khonsulabs/kludgine.git", rev = "852072eeeef6a32179977815ec772e72a5cc5d3a" }
rodio = "0.11"
anyhow = "1"
once_cell = "1"
rand = "0.7"
webbrowser = "0.5"
